k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexusconsult
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header X-Frame-Options SAMEORIGIN;
      add_header X-Content-Type-Options nosniff;
      add_header Referrer-Policy strict-origin-when-cross-origin;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nexusconsult.dev
        - api.nexusconsult.dev
      secretName: nexus-tls
  rules:
    - host: nexusconsult.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-web-svc
                port:
                  number: 80
    - host: api.nexusconsult.dev
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: nexus-python-svc
                port:
                  number: 8000
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: nexus-ai-svc
                port:
                  number: 8001
